--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "smartuniversity",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "app.js"
-  },
+  "scripts": {},
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
